bk_ida/gccida/c1/copy_loop_body
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_loop_body/src/unroll.c:2246:1: error: must use 'enum' tag to refer to type 'unroll_types'
unroll_types unroll_type, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_loop_body/src/unroll.c:2257:4: error: expected ';' after expression
rtx v18; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_loop_body/src/unroll.c:2257:5: error: use of undeclared identifier 'v18'
rtx v18; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_loop_body/src/unroll.c:2261:4: error: expected ';' after expression
rtx v22; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_loop_body/src/unroll.c:2261:5: error: use of undeclared identifier 'v22'; did you mean 'v20'?
rtx v22; // rax 
    ^~~
    v20
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_loop_body/src/unroll.c:2259:18: note: 'v20' declared here
 struct rtx_def *v20; // rax 
                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_loop_body/src/unroll.c:2264:4: error: expected ';' after expression
rtx label_from_map; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_loop_body/src/unroll.c:2264:5: error: use of undeclared identifier 'label_from_map'; did you mean 'get_label_from_map'?
rtx label_from_map; // rax 
    ^~~~~~~~~~~~~~
    get_label_from_map
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_loop_body/src/integrate.h:166:12: note: 'get_label_from_map' declared here
extern rtx get_label_from_map PARAMS ((struct inline_remap *, int));
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_loop_body/src/unroll.c:2265:4: error: expected ';' after expression
rtx v26; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_loop_body/src/unroll.c:2265:5: error: use of undeclared identifier 'v26'
rtx v26; // r13 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_loop_body/src/unroll.c:2267:4: error: expected ';' after expression
rtx v28; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_loop_body/src/unroll.c:2267:5: error: use of undeclared identifier 'v28'
rtx v28; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_loop_body/src/unroll.c:2270:4: error: expected ';' after expression
rtx v31; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_loop_body/src/unroll.c:2270:5: error: use of undeclared identifier 'v31'; did you mean 'v30'?
rtx v31; // rax 
    ^~~
    v30
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_loop_body/src/unroll.c:2269:18: note: 'v30' declared here
 struct rtx_def *v30; // rsi 
                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_loop_body/src/unroll.c:2278:1: error: use of undeclared identifier 'induction_1'
induction_1 *v39; // r13 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_loop_body/src/unroll.c:2278:14: error: use of undeclared identifier 'v39'
induction_1 *v39; // r13 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_loop_body/src/unroll.c:2280:4: error: expected ';' after expression
rtx v41; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_loop_body/src/unroll.c:2280:5: error: use of undeclared identifier 'v41'; did you mean 'v40'?
rtx v41; // rax 
    ^~~
    v40
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_loop_body/src/unroll.c:2279:9: note: 'v40' declared here
__int64 v40; // r15 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_loop_body/src/unroll.c:2281:4: error: expected ';' after expression
rtx v42; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_loop_body/src/unroll.c:2281:5: error: use of undeclared identifier 'v42'
rtx v42; // rdx 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_loop_body/src/obj/unroll.o] Error 1
